--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,8 +2,8 @@
 
 one:
   email: email@mail.com
-  password_digest: hashed_password
+  password_digest: <%= BCrypt::Password.create('g00d_pa$$') %>
 
 two:
   email: otheremail@mail.com
-  password_digest: hashed_password
+  password_digest: <%= BCrypt::Password.create('b@d_pa$$') %>
