--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: email@mail.com
+  email: frankyston@mail.com
   password_digest: <%= BCrypt::Password.create('g00d_pa$$') %>
 
 two:
