--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,17 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  title: Keyboard
-  price: 29.99
-  published: true
+  title: TV Plosmo Philopps
+  price: 9999.99
+  published: false
   user: one
 
 two:
-  title: Mouse
-  price: 9.99
+  title: Azos Zeenbok
+  price: 499.99
+  published: false
+  user: two
+
+another_tv:
+  title: Cheap TV
+  price: 99.99
   published: false
   user: two
